fixed overflow of project pane

--- a/app/less/game.less
+++ b/app/less/game.less
@@ -40,7 +40,7 @@ THE SOFTWARE.
     padding: @panelPadding;
     padding-top: @panelPadding + 0.2rem;
     display: inline-block;
-    max-height: @bodyHeight;
+    max-height: @bodyHeight - 3px;
     width: 40%;
     min-width: 250px;
     max-width: 500px;
